        be used with any NPC reference/slice/zone/menu item handle.
      * "get zone" command returns a zone handle.
      * You can use Python-style negative indexing to read from the back of
        the extra array: "get extra(sl, -1)" is the last value, -2 is the second
        last, etc. Works with all extra data commands.
      [Ralph]
    * "get attack extra" [Holly]
    * "lookup next slice", "next slice in tree" [Ralph]
    * "window is focused" [Ralph]
    * "show value" can now show multiple values. Added "show values" as an alias.
      Added "show value of", a cross between "show value" and "trace value" that
      shows expressions. Added "trace value of" as an alias to "trace value".
      [Ralph]
    * "exit(x)" is short for "exit returning(x)" and "exit" is short for
      "exit script" [Ralph]
    * (Unix only) --print and --printonly commandline args cause trace/tracevalue
      to print to the terminal as well as/instead of g_debug.txt [Ralph]
    * "reset enemy data", "reset enemy stat", "reset enemy name" [Ralph]
    * "slice is valid" can now tell slice handles apart from anything else (e.g.
      NPCs, menus) and is safe to use: it no longer returns false positives...
      until you create and delete at least a million slices. Good enough. [Ralph]
    * "hero uses level mp" [James]
    * "delete map state" takes customid arg, like other mapstate commands [Ralph]
    * "get/set rect fuzzy zoom", "get/set rect stationary pattern" [Ralph]
    * "keypress time" [Ralph]
    * "random choice" [Ralph]
    * "move slice to screen pos" "gently reparent", "gently realign slice" [James]
    * "lookup ancestor" [James]
    * "get stat name" [Ralph]
    * "pathfind into extra as hero" and "pathfind into extra as npc" [James]

  *** Changes
    * Removed support for optional prefixes on .ini config settings (e.g.
      "fullscreen" instead of "gfx.fullscreen"), game-specific prefixes (e.g.